--- a/SCMC/Views/CunltivationDetails/Create.cshtml
+++ b/SCMC/Views/CunltivationDetails/Create.cshtml
@@ -16,7 +16,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.FarmerId, "FarmerId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.FarmerId, "FarmerId", htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class = "control-label col-md-2">Farmer Name</label>
             <div class="col-md-10">
                 @Html.DropDownList("FarmerId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FarmerId, "", new { @class = "text-danger" })
@@ -24,7 +25,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LandArea, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.LandArea, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Land Area</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LandArea, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LandArea, "", new { @class = "text-danger" })
@@ -32,7 +34,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CaneVariety, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.CaneVariety, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Cane Variety</label>
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.CaneVariety, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CaneVariety, "", new { @class = "text-danger" })
@@ -40,7 +43,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PlantRatoon, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.PlantRatoon, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Plant/Ratoon</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PlantRatoon, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PlantRatoon, "", new { @class = "text-danger" })
@@ -48,7 +52,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DateofPlanting, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.DateofPlanting, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Date of Planting</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateofPlanting, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateofPlanting, "", new { @class = "text-danger" })
@@ -56,7 +61,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.EstimatedTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.EstimatedTime, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Estimated Time</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EstimatedTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EstimatedTime, "", new { @class = "text-danger" })
@@ -64,7 +70,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DeliverDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.DeliverDate, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <label class="control-label col-md-2">Deliver Date</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DeliverDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DeliverDate, "", new { @class = "text-danger" })
