--- a/SCMC/Views/CunltivationDetails/Index.cshtml
+++ b/SCMC/Views/CunltivationDetails/Index.cshtml
@@ -3,13 +3,13 @@
 @model PagedList.IPagedList<SCMS.Models.CunltivationDetail>
 @using PagedList.Mvc;
 
- 
+
 
 @{
     ViewBag.Title = "Farmer History";
 }
 
-<h2>Index</h2>
+<h2>Farmers Entry Details</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -22,7 +22,13 @@
                 Find by name:
             </td>
             <td>
-                @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+                &nbsp; @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @style = "width:200px" })
+            </td>
+            <td>
+                &nbsp; Deliver Date:
+            </td>
+            <td>
+                &nbsp; @Html.TextBox("deliverDate", ViewBag.CurrentFilter as DateTime?, new { @type = "date", style = "width:200px" })
             </td>
         </tr>
         <tr>
@@ -30,20 +36,25 @@
                 Date of Planting:
             </td>
             <td>
-                @Html.TextBox("dateOfPlanting", ViewBag.CurrentFilter as DateTime?)
+                &nbsp; @Html.TextBox("dateOfPlanting", ViewBag.CurrentFilter as DateTime?, new { @type = "date", style = "width:200px" })
             </td>
         </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td><input type="submit" value="Search" style="margin-top:10px;float:right;" /></td>
+        </tr>
     </table>
-    <input type="submit" value="Search" />
 }
-<table class="table">
+<table class="table" style="margin-top:10px;">
     <tr>
         <th>
             @*@Html.DisplayNameFor(model => model.Farmer.FirsName)*@
             @Html.ActionLink("First Name", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
-           Land Area
+            Land Area
         </th>
         <th>
             Cane Variety
@@ -55,7 +66,7 @@
             Date of Planting
         </th>
         <th>
-           Estimated Time)
+            Estimated Time
         </th>
         <th>
             @Html.ActionLink("Deliver Date", "Index", new { sortOrder = ViewBag.DateSortParm })
@@ -63,36 +74,37 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Farmer.FirsName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LandArea)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CaneVariety)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PlantRatoon)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateofPlanting)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EstimatedTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeliverDate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Farmer.FirsName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LandArea)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CaneVariety)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlantRatoon)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateofPlanting)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EstimatedTime)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DeliverDate)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
 <br /> Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
