--- a/SCMC/Views/Shared/_Layout.cshtml
+++ b/SCMC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,18 @@
     <title>@ViewBag.Title - SCMC Management System</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style  type="text/css">
+        .navbar-inverse {
+              background-color: #4978a0;
+              /*border-color: #080808;*/
+            }
+        .navbar-inverse .navbar-brand {
+          color: #ffffff;
+        }
+        .navbar-inverse .navbar-nav > li > a {
+          color: #d4c9c9;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
